# hyptop-dashboard

./: .gitignore  README.md  pyproject.toml  setup.py
Openshift/: hyptopsrv.yaml  ocp-console-dashboard.yaml  ocp-monitoring-stack.yaml  prometheus-grafana-stack.yaml
deploy/: hyptop-exporter.service
docs/: openshift-ocp-monitoring-hyptop.md  openshift-prometheus-grafana-hyptop.md
grafana/: hyptop-lpar.json
src/hyptop_dashboard/: __init__.py  __main__.py  cli.py  parser.py
tests/: test_cli_metrics.py  test_parser.py
tests/fixtures/: hyptop_sys_list_sample.txt  hyptop_zvm_sys_list_sample.txt
